tests/snapshots/run_wpt_conformance__litert_matmul_float16_5D_and_5D_tensors__broadcast_the_two_leftmost_dimensions_of_inputB.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
matmul.https.any.js matmul float16 5D and 5D tensors, broadcast the two leftmost dimensions of inputB, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[2, 2, 1, 3, 4];
    inputB: f16[1, 1, 1, 4, 5];
  }

  nodes {
    [output] = matmul(inputA, inputB, label="");
  }

  outputs { output; }
}
